# domotik

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  docker-compose.yml  pom.xml
Cycling_F/: package-lock.json  package.json
DataExchange/: Dockerfile  applogger.py  main.py  pyproject.toml
DataExchange/dataexchange/: message_utils.py  models.py  mongo.py  mqtt.py  mqtt_producer.py  postgres_utils.py  rabbitmq.py  rtmq_producer.py
DomotikBox/: pyproject.toml
DomotikBox/domotikbox/: mqtt_consumer.py  mqtt_producer.py  rtmq_consumer.py  rtmq_producer.py
DomotikFront/: nginx.conf
House_Config-service/: Dockerfile  pom.xml
House_front/: Dockerfile  nginx.conf  package-lock.json  package.json
Notification-service/: Dockerfile  pom.xml
NotificationManager/: applogger.py  main.py  pyproject.toml
NotificationManager/notificationmanager/: message_utils.py  models.py  postgres_utils.py  rabbitmq.py  redis_utils.py
QueuingService/: definitions.json  rabbitmq.conf
ScriptFront/: retrieve_notifications.py  send_configurations.py
ScriptsFront/: retrieve_notifications.py  send_configurations.py
Security-management/: pom.xml
bike-management/: pom.xml
customer-account-management/: dependency-reduced-pom.xml  pom.xml
debt-management/: pom.xml
models/: pom.xml
nginx/: nginx.conf
scripts/: config_service_logs.sh  consume_config.bat  data_exchange_logs.sh  get_notifications.bat  mongo_logs.sh  notification_manager_logs.sh  notification_service_logs.sh  postgres.bat  produce_logs.bat  redis_logs.sh  restart_back.sh  (+2 more)
(+222 files in other folders)
