[tool.poetry]
name = "dataexchange"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
paho-mqtt = "^2.1.0"
pika = "^1.3.2"
pymongo = "^4.10.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
